Enforce validDocIds consensus in upsert task generators and add includeBitmaps to validDocIdsMetadata API (#18853)